2010-05-19  Per Bothner  <per@bothner.com>

	* XmlNamespace.java: Update Namespace.getInstance -> valueOf.
	(make): Remove to valueOf.

2009-12-02  Per Bothner  <per@bothner.com>

	* KDocument.java (getDocumentElement): Need to skip comments.
	Also make return type more specific.

2008-09-05  Per Bothner  <per@bothner.com>

	* XDataType.java (untypedType): New XDataType for xs:untyped.
	(UNTYPED_TYPE_CODE): New constant.
	(isInstance): Handle UNTYPED_TYPE_CODE.

	* MakeElement.java (toString): New method.

2008-08-11  Per Bothner  <per@bothner.com>

	* XmlNamespace.java (make, <init>): Swap parameter order, to match
	writeExternal output (as used for literals).
	This fixes Savannah bug #24037 "xml namespace prefix and namespace
	uri swapped in output from compiled code".

2008-07-26  Per Bothner  <per@bothner.com>

	* XDataType.java (ANY_ATOMIC_TYPE_CODE): New constant.
	(anySimpleType): New type.
	(isInstance): Handle (approximately) anySimpleType.

2008-06-16  Per Bothner  <per@bothner.com>

	* MakeElement.java (tag): Give more specific type.

	* XIntegerType.java (valueOf): Initial signs are allowed even
	for unsigned types, to be compatible XML Schema 1.1 (and maybe
	XML Schema 1.0, but that is somewhat unclear).

2008-04-26  Per Bothner  <per@bothner.com>

	* SortedNodes.java (find): Use unsigned shift to avoid
	potential overflow error in binary search.

2008-01-16  Per Bothner  <per@bothner.com>

	* MakeUnescapedData (inline): Handle new argsInlined parameter.
	* TreeScanner.java (inline): Likewise.

2007-12-30  Per Bothner  <per@bothner.com>

	* Document.java: Split the uri-to-docujment cache into a string
	thread-local mp, and a soft global map, so the former can be cleared
	when done with a module.

2007-12-26  Per Bothner  <per@bothner.com>

	* AttributeAxis.java (scan): Add correct stop condition.
	Fixes Red Hat Bugzilla #370851 "XQuery miss-search".

2007-11-04  Per Bothner  <per@bothner.com>

	* XmlNamespace.java: Add missing support for pre-JAVA5.
